--- a/front/package.json
+++ b/front/package.json
@@ -5,19 +5,21 @@
   "dependencies": {
     "@material-ui/core": "4.11.4",
     "@material-ui/icons": "4.11.2",
+    "axios": "^0.26.1",
     "chartist": "0.10.1",
     "classnames": "2.3.1",
+    "keras": "^1.0.1",
     "match-sorter": "6.3.0",
     "moment": "2.29.1",
     "node-sass": "5.0.0",
     "nouislider": "15.0.0",
     "perfect-scrollbar": "1.5.1",
-    "react": "16.5.0",
+    "react": "17.0.2",
     "react-big-calendar": "0.33.2",
     "react-bootstrap-sweetalert": "5.2.0",
     "react-chartist": "0.14.4",
-    "react-datetime": "3.0.4",
-    "react-dom": "16.5.0",
+    "react-datetime": "3.1.1",
+    "react-dom": "17.0.2",
     "react-jvectormap": "0.0.16",
     "react-router-dom": "5.2.0",
     "react-scripts": "4.0.3",
